css/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  
  html {
    scroll-behavior: smooth;
  }
  
  body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    line-height: 1.6;
    color: #333;
    background-color: black;
    overflow-y: scroll;
    scrollbar-width: none;
  }
  body::-webkit-scrollbar{
    display: none
  }
  
  section{
    height: 90vh;
    margin-top: 3vh;
    margin-right: 2vw;
    margin-left: 2vw;
    margin-bottom:-2vh;
    background-color: #0f121a;
  }

  hr{
    margin: 1.3vh;
  }

  #introduction{
    background-color: #0f121a;
    border-radius: 3vw 3vw 0 0;
  }

  #intro-content{
    display: flex;
    flex-direction: row;
    flex: 1;
    position: relative;
  }
  #intro-left{
    display: flex;
    flex: 0 0 auto;
    flex-direction: column;
  }
  #intro-right{
    display: flex;
    flex: 1;
  }

  #intro-left, #intro-right, #intro-card, intro-text{
    min-width: 0;
  }

  #topbar{
    flex: 1;
    height: 4vh;
    border-radius: 3vw 3vw 0 0;
    background-color: #0a0d14;
    color: #0a0d14;
  }

  #next-arrow-wrapper{
    display: flex;
    align-items: flex-end;
    height: 12vh;
    width: 10vw;
    margin-left: 50%;
    z-index: 3;
  } 

  #next-arrow-wrapper img{
    height: 30%;
    width: 30%;
  }

  .header{
    display: flex;
    flex-shrink: 0;
    padding-left: 3.5vw;
    border-radius: 3vw 3vw 0 0;
    align-items: center;
    background-color: #0a0d14;
    height: 8vh;
    font-size: 1rem;
    font-weight: 500;
    white-space: nowrap;
  }

  .word-emphasis{
    color: #4973e3;
    padding-right: .5vw;
    font-weight: 900;

  }

  #intro-icon{
    margin-top: 1vh;
    margin-left: auto;
    margin-right: 1vw;
  }
  
  #intro-icon img{
    
    justify-self: flex-end;
    height: 4vh;
    width: 4vw;
    background-color: #0a0d14;
  }

  #intro-card{
    display: flex;
    flex-direction: column;
    flex-shrink: 1;
    color: white;
    height: 49vh;
    width: 50vw;
    margin: 1vw;
    margin-left: 2vw;
    margin-right: -2vw;
    border-radius: 3vw;
    background-color: #202226;
    margin-top: 20vh;
    box-shadow: -1vw 1vw 2vw 1vw #0b0d12;
    min-height: 20vh;
    min-width: 50vw;
    z-index: 1;
  }  

  #intro-text{
    display: flex;
    flex-shrink: 0;
    flex-direction: column;
    height: 100%;
    width: 100%;
    font-size: 1rem;
    margin: 0vh;
    padding: 1vw;
    text-align: start;
  }
  #intro-thank{
    font-size: 1.5em;
    font-weight: 500;
    align-self: center;
  }
  #intro-img-wrapper{
    display: flex;
    flex: 1;
    position: relative;
    height: 100%;
    width: 100%;
    align-items: center;
    right: 10%;
    max-width: 100%;
  } 
  #greeting-photo{
    margin-top: 5vh;
    border-radius: 5vw;
    max-width: 100%;
    width: 100%;
    height: auto;
    box-shadow: -5px 5px 20px 20px #0b0d12;
  }

  /* mobile styling */
  @media (max-width: 750px){
    section{
        margin-left: 0;
        margin-right: 0;
    }
    hr{
        margin: 1vh;
      }
    #greeting-photo{
      display: none;
    }
    #intro-arrow{
        display: none;
    }
    #arrow-text{
        display: none;
    }
    .header{
        flex-shrink: 0;
        white-space: nowrap;
        font-size: .8rem;
    }
    #intro-content{
        display: flex;
        justify-content: center;
        width: 100%;
        padding: 10px;
        box-sizing: border-box;
    }
    #intro-right{
        display: none;
    }
    #intro-left{
        display: flex;
        width: 100%;
    }
    #intro-card{
        width: 100%;
        height: auto;
        min-height: clamp(280px, 42vh, 420px);
        margin-top: 0;
        margin: 0;
        box-sizing: border-box;
        min-width: 0;
        max-width: 100%;
    }
    #intro-text{
        font-size: .8em;
        flex-shrink: 0;
        font-weight: 500;
    }
    #intro-icon img{
        margin-right: 10vw;
        justify-self: flex-end;
        height: 4vh;
        width: 4vw;
        background-color: #0a0d14;
      }
    
  }

  /* tablet styling */
  @media (min-width: 768px) and (orientation: portrait){
    #intro-card{
      height: auto;          
      min-height: 36vh;      
      margin-top: 20vh;       
    }
    .header{
      font-size: 1rem;
    }
    #intro-text{
      line-height: 1.4;
      font-size: 1.6vw;
    }
  }

